--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
   <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script> 
 <script src="https://kit.fontawesome.com/86eaea117e.js" crossorigin="anonymous"></script>
